Added logo image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <main class="container">
+      <div class="lendme-logo">
+        <img src="./assets/lendme.svg" alt="" />
+      </div>
       <div class="container__element">
         <div class="artwork">
           <img src="./assets/Artwork.svg" alt="" />
